Fix sidebar display on small screens

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -176,11 +176,11 @@
     width: 150px;
     transition: opacity 0.3s ease, visibility 0.3s ease;
   }
-  
+
   .about-option {
     font-size: 16px;
     color: #ffff;
-    padding: 5px; 
+    padding: 5px;
     border-radius: 5px;
     transition: background-color 0.3s ease, color 0.3s ease;
   }
@@ -189,62 +189,60 @@
   .close-icon {
     display: none;
   }
+}
 
-  @media screen and (max-width: 800px) {
-    .nav-bar {
-      background: transparent;
-      position: initial;
-      height: auto;
-      min-height: auto;
+@media screen and (max-width: 800px) {
+  .nav-bar {
+    background: transparent;
+    position: initial;
+    height: auto;
+    min-height: auto;
 
-      ul,
-      nav {
-        display: none;
-      }
+    ul,
+    nav {
+      display: none;
+    }
 
-      nav {
-        width: 100%;
-        top: 0;
-        left: 0;
-        background: #181818;
-        height: 100%;
-        margin: 0;
-        z-index: 2;
-        position: fixed;
+    nav {
+      width: 100%;
+      background: rgba(0, 0, 0, 0.9);
+      height: 100%;
+      margin: 0;
+      z-index: 1000;
+      position: fixed;
 
-        &.mobile-show {
-          display: block;
-        }
-
-        a,
-        .about-link {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-
-        a:after,
-        .about-link:after {
-          opacity: 1;
-          position: initial;
-          width: auto;
-          margin-left: 10px;
-        }
-
-        a svg,
-        .about-link svg {
-          opacity: 1 !important;
-        }
-      }
-
-      .hamburger-icon,
-      .close-icon {
-        position: absolute;
-        top: 15px;
-        right: 15px;
+      &.mobile-show {
         display: block;
-        cursor: pointer;
       }
+
+      a,
+      .about-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      a:after,
+      .about-link:after {
+        opacity: 1;
+        position: initial;
+        width: auto;
+        margin-left: 10px;
+      }
+
+      a svg,
+      .about-link svg {
+        opacity: 1 !important;
+      }
+    }
+
+    .hamburger-icon,
+    .close-icon {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      display: block;
+      cursor: pointer;
     }
   }
 }
